--- a/g/gn/gno/gnolia.com.html
+++ b/g/gn/gno/gnolia.com.html
@@ -1,58 +1,142 @@
-<!--The following is the downloaded HTML source of the gnolia.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216072055id_/http%3A//gnolia.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gnolia.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024128id_/http%3A//ma.gnolia.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
-		<title>Ma.gnolia: Social bookmarking to build an information community online.</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta name="description" content="Visit Ma.gnolia.com to learn about social bookmarking with our bookmark manager and our worldwide online information community.">
-		<meta name="keywords" content="social,bookmarking,community,online,favorite,printable,bookmark,manager,community,web site,online organization">
-		<link href="/stylesheets/magnolia.css" media="screen" rel="Stylesheet" type="text/css">		<script src="/javascripts/__utm.js" type="text/javascript"></script><script language="JavaScript1.5">_ujv='1.5';</script>		<link rel="shortcut icon" type="image/ico" href="/favicon.ico">
-	</head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<title>Ma.gnolia: Privacy Policy</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="description" content="Find web sites with Ma.gnolia's social bookmarking online community. Organize bookmarks, search other people's favorites and make friends and contacts online.">
+<meta name="keywords" content="social bookmarking, search web sites, find web sites, online community, bookmark, web search, online bookmark, best web sites, online organizer, social network, online network, tagging, folksonomy">
 
-	<body>
-		
-		<div id="mainBox"> <!-- START MAIN BOX -->
-		
-			<a href="/"><h1 class="magnolia"></h1></a>
-			
-			<div id="contentBox"><!-- START CONTENT BOX -->
-			<h2>Privacy Policy</h2>
+<link rel="shortcut icon" type="image/ico" href="/favicon.ico">
 
-<dl>
-<dd>At Gnolia Systems, we are committed to protecting your privacy. We use the information we collect about you on the Ma.gnolia Pre-launch site to communicate with you only about Ma.gnolia’s launch and nothing more. Please read on for more details about our privacy policy.</dd>
+<script src="/javascripts/prototype.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/application.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/magnolia.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/dialog.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/tags.js?1150170055" type="text/javascript"></script>
+<script src="/javascripts/__utm.js?1150170055" type="text/javascript"></script>
 
-<dt>What information does Ma.gnolia collect on its pre-launch site? How do we use it?</dt><dt>
+<link rel="alternate" title="RSS" type="application/rss+xml">
+<link href="/stylesheets/gnolia.css?1150170131" media="screen" rel="Stylesheet" type="text/css">
+<link href="/stylesheets/page.css?1150170131" media="screen" rel="Stylesheet" type="text/css">
+</head>
 
-</dt><dd>When you sign-up to receive a notification of Ma.gnolia’s launch, we collect your email address. That email address is used to send you your requested communications about Ma.gnolia’s launch only.</dd>
+<body class="page  fullwidth">
 
-<dd>For certain types of sign-ups, we may also request a specific code to identify you as a pre-selected V.I.P. member. Once that code is entered, we do not use it to further track you.</dd>
+<div id="masthead">
+<a href="http://ma.gnolia.com/"><img alt="ma.gnolia" src="/images/logo.gif?1150170127"></a>
+<p>
+<a href="http://ma.gnolia.com/tutorial/SocialBookmarking">Learn More</a> |
+<a href="http://ma.gnolia.com/faq">FAQ</a>
+</p>
+</div>
 
-<dd>For members participating on the Ma.gnolia development blog, we may collect your screen name, should you choose to provide one, and any comments left by you on the blog. This information is used solely to enhance your communication experience on the blog and not for any additional Ma.gnolia purposes. However, comments left on the Ma.gnolia development blog do become the property of Gnolia Systems, LLC.</dd>
+<div id="contain">
 
-<dt>How does Gnolia Systems protect customer information?</dt>
+<ul id="navbar"><li class="bookmarks" title="Explore Ma.gnolia Bookmarks"><a href="http://ma.gnolia.com/bookmarks">Bookmarks</a></li><li class="tag" title="View tags from you and others, use them to search for bookmarks, and change your own tags"><a href="http://ma.gnolia.com/tags">Tags</a></li><li class="people" title="Go to your contacts and their bookmarks, and find new people"><a href="http://ma.gnolia.com/people">People</a></li><li class="groups" title="Find, join and create interest group"><a href="http://ma.gnolia.com/groups">Groups</a></li><li class="support" title="Find help, advanced tools and add-ons"><a href="http://ma.gnolia.com/support">Support &amp; tools</a></li><li class="signin" title="Sign in"><a href="http://ma.gnolia.com/signin">Sign In</a></li><li class="join" title="Join Ma.gnolia for free"><a href="http://ma.gnolia.com/join">Join</a></li></ul>
+<div id="main">
+<h1>Privacy Policy</h1>
 
-<dd>When you provide information or log into a protected area on the Ma.gnolia web site, we use a secure server. This secure server software, SSL (Secure Sockets Layer) encrypts all information you input before it is sent to us. Furthermore, all of the  transactional data we collect is protected against unauthorized access with the use of digital certificates. Digital certificates for Gnolia Systems are issued by VeriSign, one of the most established signers of digital certificates. To learn more about our online security, simply click on the "Security" icon (it usually appears as a padlock) in your browser tool bar, at the bottom of your browser window.</dd>
+<p>At Gnolia Systems, we are committed to protecting your privacy. We love to use the web as much as you, and so we’ve used the ‘do unto others’ rule to set up the privacy safeguards that we discuss below.</p>
 
-<dt>Will Gnolia Systems disclose the information it collects to outside parties?</dt>
 
-<dd>Absolutely not. Gnolia Systems will not sell, trade or rent the personal information you submit—period. Gnolia Systems may provide aggregate statistics about our users, traffic patterns, and related site information to reputable third-party vendors, but these statistics will include no personally identifying information.</dd>
-</dl>
+	<p>We use the information we collect about you on the Ma.gnolia web site is used to build our tag suggestion system, allow you to identify yourself when communicating with Ma.gnolia members or groups, and for us to communicate with you about the Ma.gnolia site and in any newsletters you have opted into.  Please read on for more details about our privacy policy.</p>
 
-<div class="roundBoxBottom">  <!-- START BOX FOR ROUNDED BOTTOM -->
-</div><!-- END BOX FOR ROUNDED BOTTOM -->
 
-			</div><!-- END CONTENT BOX -->
+	<h2>What information does Ma.gnolia collect on its web site? How do we use it?</h2>
 
-			<div id="footer"><!-- START FOOTER -->
-				<p class="info">Have media inquiries about Ma.gnolia or questions about V.I.P. codes? Email us at beta (at) Ma.gnolia (dot) com or phone us at 415-364-0070.</p>
-				<p class="footLeft">© 2005 Gnolia Systems. All Rights Reserved.</p>
-				<p class="footRight"><a href="/privacy">Privacy Policy</a> | <a href="/tos">Terms of Service</a>
-			</p></div><!-- END FOOTER -->
-			<div class="clear"> </div>
-		</div><!-- END MAIN BOX -->
-		<div id="bottomBorder"> </div>
 
-	
+	<p>When you sign-up for a Ma.gnolia free account, we ask for your email address, screen name, password and some limited information about your geographic location, age and gender. We just use this information to make Ma.gnolia a better product for you.</p>
+
+
+	<p>While you are using the Ma.gnolia service, Ma.gnolia stores all data that you have saved, including saved bookmarks and applied tags so that we can maintain your collection and keep it distinct from everyone else’s.</p>
+
+
+	<h2>How does Gnolia Systems protect customer information?</h2>
+
+
+	<p>When you provide information or log into a protected area on the Ma.gnolia web site, we use a secure server. This secure server software, <span class="caps">SSL</span> (Secure Sockets Layer) encrypts all information you input before it is sent to us. Furthermore, all of the transactional data we collect is protected against unauthorized access with the use of digital certificates. Digital certificates for Gnolia Systems are issued by VeriSign, one of the most established signers of digital certificates. To learn more about our online security, simply click on the “Security” icon (it usually appears as a padlock) in your browser tool bar, at the bottom of your browser window. If you do not see an indication of secure mode where you think it should be, then contact us immediately to let us know.</p>
+
+
+	<h2>Will Gnolia Systems disclose the information it collects to outside parties?</h2>
+
+
+	<p>Absolutely not. Gnolia Systems will not sell, trade or rent the individualized and personal information you submit without your express permission – period. Gnolia Systems may provide aggregate statistics about our users, traffic patterns, and related site information to reputable third-party vendors, but these statistics will include no personally identifying information. That means we may talk about what happens with large numbers of users on our system, but we never share data about individual users.</p>
+
+
+	<p>If any part of this privacy policy gives you concern, we invite you to discuss it with us by using our contact form. We will update this policy in the future to make its terms more clear when necessary, and to respond to changes in legal and public thinking about privacy online.</p></div>
+<div id="adverts">
+
+<span class="banner"><script language="JavaScript" type="text/javascript">
+document.write('<script language="JavaScript1.1" type="text/javascript" src="http://ad.doubleclick.net/adj/site104.tmus/home;tile=1;dcopt=ist;sz=468x60;ord=' + ord + '?" ><\/script>');
+</script>
+<script language="JavaScript1.1" type="text/javascript">
+if ((!document.images && navigator.userAgent.indexOf("Mozilla/2.") >= 0)  || navigator.userAgent.indexOf("WebTV")>= 0) {
+document.write('<a href="http://ad.doubleclick.net/adj/site104.tmus/home;tile=1;sz=468x60;ord=' + ord + '?" target="_blank"><img src="http://ad.doubleclick.net/adj/site104.tmus/home;tile=1;sz=468x60;ord=' + ord + '?" width="468" height="60" border="0" alt="" /><' + '/a>');
+}
+</script>
+<noscript>
+<a href="http://ad.doubleclick.net/adj/site104.tmus/home;tile=1;sz=468x60;ord=123456789?" target="_blank">
+<img src="http://ad.doubleclick.net/adj/site104.tmus/home;tile=1;sz=468x60;ord=123456789?" width="468" height="60" border="0" alt="" /></a>
+</noscript></span>
+
+<div class="textads">
+<script type="text/javascript"><!--
+google_ad_client = "pub-3375708111560022";
+google_alternate_ad_url = "http://ma.gnolia.com/externals/google_adsense_script.html";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_type = "text";
+google_ad_channel ="";
+google_color_border = "FFFFFF";
+google_color_link = "9EB743";
+google_color_bg = "FFFFFF";
+google_color_text = "000000";
+google_color_url = "2C669A";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></div>
+
+<div class="advert">
+<script language="JavaScript" type="text/javascript">
+<!--
+   if (!document.phpAds_used) document.phpAds_used = ',';
+   phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
+   
+   document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
+   document.write ("http://cossette.nodes.umlnode.com/adjs.php?n=" + phpAds_random);
+   document.write ("&amp;what=zone:129&amp;target=Blank");
+   document.write ("&amp;exclude=" + document.phpAds_used);
+   if (document.referer)
+      document.write ("&amp;referer=" + escape(document.referer));
+   document.write ("'><" + "/script>");
+//-->
+</script><script language="JavaScript" type="text/javascript" src="http://cossette.nodes.umlnode.com/adjs.php?n=342396805&amp;what=zone:129&amp;target=Blank&amp;exclude=,"></script><noscript><a href='http://cossette.nodes.umlnode.com/adclick.php?n=aec994e3' target='Blank'><img src='http://cossette.nodes.umlnode.com/adview.php?what=zone:129&amp;n=aec994e3' border='0' alt='' /></a></noscript>
+</div>
+
+</div>
+
+
+</div>
+
+<div id="footer">
+<p id="copyright">
+© 2006 Gnolia Systems.  All Rights Reserved.
+</p>
+<ul>
+<li><a href="http://ma.gnolia.com/about">About Us</a></li>
+<li><a href="http://ma.gnolia.com/blog">Blog</a></li>
+<li><a href="http://ma.gnolia.com/advertise">Advertise</a></li>
+<li><a href="http://ma.gnolia.com/tos">Terms</a></li>
+<li><a href="http://ma.gnolia.com/privacy">Privacy</a></li>
+<li class="last"><a href="http://ma.gnolia.com/contactus">Contact Us</a></li>
+</ul>
+</div>
+
 
 
 </body></html>
