--- a/h/ho/hom/homeworknow.com.html
+++ b/h/ho/hom/homeworknow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homeworknow.com privacy policy that was archived on 2005-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051119224140id_/http%3A//homeworknow.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homeworknow.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024523id_/http%3A//www.homeworknow.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title></title>
