--- a/t/th/the/thecoolhunter.net.html
+++ b/t/th/the/thecoolhunter.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thecoolhunter.net privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215004210id_/http%3A//www.thecoolhunter.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecoolhunter.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024547id_/http%3A//www.thecoolhunter.net/Privacy-Statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>the cool hunter - Privacy Statement</title>
@@ -14,7 +14,7 @@
 			<link rel="shortcut icon" href="http://www.thecoolhunter.net/images/favicon.ico">
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <script src="/__utm.js" type="text/javascript"></script>
-<link href="http://www.thecoolhunter.net/templates/thecoolhunter/css/template_css.css?1" rel="stylesheet" type="text/css">
+<link href="http://www.thecoolhunter.net/templates/thecoolhunter/css/template_css.css?11" rel="stylesheet" type="text/css">
 <title>the cool hunter</title>
 </head>
 
@@ -27,7 +27,7 @@
 		<div class="navbar">			<table cellpadding="0" cellspacing="0" class="moduletable-MainMenu">
 						<tbody><tr>
 				<td>
-				<table width="100%" border="0" cellpadding="0" cellspacing="1"><tbody><tr><td nowrap="nowrap"><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/home/" class="mainlevel-MainMenuLinks">Home</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/design/" class="mainlevel-MainMenuLinks">Design</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/lifestyle/" class="mainlevel-MainMenuLinks">Lifestyle</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/travel/" class="mainlevel-MainMenuLinks">Travel</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/music/" class="mainlevel-MainMenuLinks">Music</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/books/" class="mainlevel-MainMenuLinks">Books</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/gadgets/" class="mainlevel-MainMenuLinks">Gadgets</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/art/" class="mainlevel-MainMenuLinks">Art</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/fashion/" class="mainlevel-MainMenuLinks">Fashion</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/pickoftheweek/" class="mainlevel-MainMenuLinks">Pick of the week</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/news/" class="mainlevel-MainMenuLinks">News</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/about/" class="mainlevel-MainMenuLinks">About</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/contact/" class="mainlevel-MainMenuLinks">Contact</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://lists.thecoolhunter.net/mailman/listinfo/thecoolhunterlist" class="mainlevel-MainMenuLinks">subscribe</a><span class="mainlevel-MainMenuLinks">  </span></td></tr></tbody></table>				</td>
+				<table width="100%" border="0" cellpadding="0" cellspacing="1"><tbody><tr><td nowrap="nowrap"><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/home/" class="mainlevel-MainMenuLinks">home</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/news/" class="mainlevel-MainMenuLinks">news</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/design/" class="mainlevel-MainMenuLinks">design</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/lifestyle/" class="mainlevel-MainMenuLinks">lifestyle</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/travel/" class="mainlevel-MainMenuLinks">travel</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/music/" class="mainlevel-MainMenuLinks">music</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/books/" class="mainlevel-MainMenuLinks">books</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/Gadgets/" class="mainlevel-MainMenuLinks">gadgets</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/art/" class="mainlevel-MainMenuLinks">art</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/fashion/" class="mainlevel-MainMenuLinks">fashion</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/eco-world/" class="mainlevel-MainMenuLinks">eco world</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/shows/" class="mainlevel-MainMenuLinks">shows</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/events/" class="mainlevel-MainMenuLinks">events</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/profiles/" class="mainlevel-MainMenuLinks">profiles</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/ads/" class="mainlevel-MainMenuLinks">ads</a><span class="mainlevel-MainMenuLinks">  </span><a href="http://www.thecoolhunter.net/hot-pick/" class="mainlevel-MainMenuLinks">hot pick</a><span class="mainlevel-MainMenuLinks">  </span></td></tr></tbody></table>				</td>
 			</tr>
 			</tbody></table>
 				  </div>
@@ -35,14 +35,14 @@
 		<div id="feature_artist">			<table cellpadding="0" cellspacing="0" class="moduletable-FeatureArtist">
 						<tbody><tr>
 				<td>
-				<div class="moduletable-FeatureArtist"><a href="/featureartists/"><img src="/images/stories/feature-artist/nigel1.jpg" alt="" border="0" class="moduletable-FeatureArtist"></a></div>
+				<div class="moduletable-FeatureArtist"><img src="/images/stories/feature-artist/msvans.jpg" alt="" border="0" class="moduletable-FeatureArtist"></div>
 				</td>
 			</tr>
 			</tbody></table>
 			</div>
 		<table width="100%" border="0" cellspacing="0" cellpadding="0" id="optionbar">
   <tbody><tr>
-    <td id="todayDate">Thursday 15th December 2005</td>
+    <td id="todayDate">Thursday 15th June 2006</td>
     <td id="subscribe"><form action="http://lists.thecoolhunter.net/mailman/subscribe/thecoolhunterlist" method="get">
         <span class="search-sitesearch">
         <input name="email" type="text" class="inputbox-sitesearch" id="email" onfocus="if(this.value=='subscribe: enter email') this.value='';" onblur="if(this.value=='') this.value='subscribe: enter email';" value="subscribe: enter email" size="20" alt="subscribe">
@@ -56,7 +56,7 @@
   </tr>
 </tbody></table>
 		<div id="BodyContent">
-		  <span class="pathway"><a href="index.php" class="pathway">Home</a> <img src="http://www.thecoolhunter.net/images/M_images/arrow.png" alt="arrow">   Privacy Statement </span>
+		  <span class="pathway"><a href="index.php" class="pathway">home</a> <img src="http://www.thecoolhunter.net/images/M_images/arrow.png" alt="arrow">   Privacy </span>
 		  	  </div>
 		  		  <div id="BodyContent">
 		  <div class="SectionHeading0"></div>
@@ -118,7 +118,7 @@ contact page.<br>
 						  			<table cellpadding="0" cellspacing="0" class="moduletable-footermenu">
 						<tbody><tr>
 				<td>
-				<table width="100%" border="0" cellpadding="0" cellspacing="1"><tbody><tr><td nowrap="nowrap"><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/privacy/" class="mainlevel-footerlinks" id="active_menu-footerlinks">Privacy Statement</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/contact/form/" class="mainlevel-footerlinks">Contact</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/advertise/" class="mainlevel-footerlinks">Advertise with us</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/search/" class="mainlevel-footerlinks">search</a><span class="mainlevel-footerlinks">  </span><a href="index2.php?option=com_rss&amp;feed=RSS1.0&amp;no_html=1" class="mainlevel-footerlinks">rss 1.0</a><span class="mainlevel-footerlinks">  </span><a href="index2.php?option=com_rss&amp;feed=RSS2.0&amp;no_html=1" class="mainlevel-footerlinks">rss 2.0</a><span class="mainlevel-footerlinks">  </span><a href="index2.php?option=com_rss&amp;feed=ATOM0.3&amp;no_html=1" class="mainlevel-footerlinks">atom 0.3</a><span class="mainlevel-footerlinks">  </span></td></tr></tbody></table>				</td>
+				<table width="100%" border="0" cellpadding="0" cellspacing="1"><tbody><tr><td nowrap="nowrap"><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/ABOUT-ME/" class="mainlevel-footerlinks">about us</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/contact/view/" class="mainlevel-footerlinks">contact</a><span class="mainlevel-footerlinks">  </span><a href="http://lists.thecoolhunter.net/mailman/listinfo/thecoolhunterlist" class="mainlevel-footerlinks">subscribe</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/Privacy-Statement/" class="mainlevel-footerlinks" id="active_menu-footerlinks">Privacy</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/Advertise/" class="mainlevel-footerlinks">Advertise</a><span class="mainlevel-footerlinks">  </span><a href="http://www.thecoolhunter.net/search/" class="mainlevel-footerlinks">search</a><span class="mainlevel-footerlinks">  </span><a href="index2.php?option=com_rss&amp;feed=RSS1.0&amp;no_html=1" class="mainlevel-footerlinks">rss 1.0</a><span class="mainlevel-footerlinks">  </span><a href="index2.php?option=com_rss&amp;feed=RSS2.0&amp;no_html=1" class="mainlevel-footerlinks">rss 2.0</a><span class="mainlevel-footerlinks">  </span><a href="index2.php?option=com_rss&amp;feed=ATOM0.3&amp;no_html=1" class="mainlevel-footerlinks">atom 0.3</a><span class="mainlevel-footerlinks">  </span></td></tr></tbody></table>				</td>
 			</tr>
 			</tbody></table>
 						</div>
@@ -129,5 +129,4 @@ contact page.<br>
   </tr>
 </tbody></table>
 
-
-<!-- 1134607330 --></body></html>
+</body></html>
