--- a/m/ma/mar/marinersoftware.com.html
+++ b/m/ma/mar/marinersoftware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marinersoftware.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230112738id_/http%3A//www.marinersoftware.com/sitepage.php%3Fpage%3D6) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marinersoftware.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615025836id_/http%3A//www.marinersoftware.com/sitepage.php%3Fpage%3D6) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js_standard.js"></script>
 
 	<style type="text/css" title="currentStyle">
-		@import "http://www.marinersoftware.com/templates/default/style/standard.css";
+		@import "/templates/default/style/standard.css";
 	</style>
 	<link href="templates/marinersoftware/style/standard.css" rel="stylesheet" type="text/css">
 
@@ -22,7 +22,7 @@
 <!--<meta http-equiv="Expires" content="Sat, 1 Jan 2000 00:00:00 GMT" />-->
 <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.classify.org/safesurf/&quot; L gen true for &quot;http://www.marinersoftware.com/&quot; r (SS~~000 1))">
 
-	<link rel="shortcut icon" href="http://www.marinersoftware.com/templates/marinersoftware/style/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/templates/marinersoftware/style/favicon.ico" type="image/x-icon">
 
   </head>
 <body>
@@ -39,7 +39,7 @@
   <tr>
 	<td class="siteBorderLeft"></td>
 	
-  <td class="siteHeaderTableNav" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;" valign="middle">&nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=3" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">company</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/eventindex.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">press</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=20" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">products</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/download.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">downloads</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=23" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">support</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/shopproduct.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">eStore</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=102" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">retailers</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="http://www.marinersoftware.com/ecartview.php?" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">view cart</a></td>
+  <td class="siteHeaderTableNav" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;" valign="middle">&nbsp;&nbsp;<a href="http://www.marinersoftware.com/search.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">search</a>&nbsp;&nbsp; |&nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=3" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">company</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/eventindex.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">press</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=20" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">products</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/download.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">downloads</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=23" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">support</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/shopproduct.php" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">eStore</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="http://www.marinersoftware.com/sitepage.php?page=102" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">retailers</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<a href="http://www.marinersoftware.com/ecartview.php?" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">view cart</a></td>
 	<td class="siteBorderRight"></td>
   </tr>
   <tr style="background-color: white;">
@@ -52,7 +52,8 @@
   </tr>
   <tr style="background-color: white;">
 	<td class="siteBorderLeft"></td>
-	<td class="siteContentTable"><table height="100%" cellspacing="0" class="siteContentTable">
+	<td class="siteContentTable">
+<table height="100%" cellspacing="0" class="siteContentTable">
   <tbody><tr> 
     <td class="siteNavIndex">
 		<div class="siteNavTable"><img src="templates/marinersoftware/images/nav/company.gif" width="110" height="13" border="0">
@@ -102,7 +103,13 @@ careful about what we send out and to whom.</div><br>
 to change at any time. Mariner Software will provide notice 30 days prior to implementing 
 any major changes to our privacy policy. Our web site contains links to other 
 web sites and is not responsible for privacy practices of those web sites. We 
-encourage users to learn about the privacy practices of those web sites.</div> <br></td>
+encourage users to learn about the privacy practices of those web sites.</div> 
+
+<!--VISISTAT SNIPPET//-->
+<script type="text/javascript">var DID=12941;</script>
+<script src="http://sniff.visistat.com/sniff.js" type="text/javascript"></script>
+<!--VISISTAT SNIPPET//-->
+<br></td>
   </tr>
 </tbody></table>
 </td>
@@ -111,7 +118,7 @@ encourage users to learn about the privacy practices of those web sites.</div> <
   <!-- new footer links -->
   <tr class="siteFooterTable">
 <td class="siteBorderLeft"></td>
-      <td style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;" align="center" bgcolor="#ffffff"><p><a href="http://www.marinersoftware.com/sitepage.php?page=12" style="font-size: 11px; text-decoration: none;">Macintosh Word Processor</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=14" style="font-size: 11px; text-decoration: none;">Macintosh Spreadsheet</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/shopproduct.php" style="font-size: 11px; text-decoration: none;">Mac Office Software</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=85" style="font-size: 11px; text-decoration: none;">Mac Journaling Software</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=74" style="font-size: 11px; text-decoration: none;">Fridge Poetry</a><br></p>
+      <td style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;" align="center" bgcolor="#ffffff"><p><a href="http://www.marinersoftware.com/sitepage.php?page=12" style="font-size: 11px; text-decoration: none;">Macintosh Word Processor</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=14" style="font-size: 11px; text-decoration: none;">Macintosh Spreadsheet</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/shopproduct.php" style="font-size: 11px; text-decoration: none;">Mac Office Software</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=85" style="font-size: 11px; text-decoration: none;">MacJournal - Blog Software</a>&nbsp; <br> &nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=74" style="font-size: 11px; text-decoration: none;">Fridge Poetry Software</a>&nbsp; |&nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=104" style="font-size: 11px; text-decoration: none;">Screenwriting Software</a><br></p>
       </td>
       <td class="siteBorderRight"></td>
     </tr>
@@ -119,7 +126,7 @@ encourage users to learn about the privacy practices of those web sites.</div> <
   <tr class="siteFooterTable">
 	<td class="siteBorderLeft"></td>
   <td class="siteFooterContent"><a href="http://www.marinersoftware.com" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">Mariner Software</a> &nbsp; &nbsp; <a href="http://www.marinersoftware.com/sitecontactfeedback.php" title="Contact Us!" alt="Contact Us!" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">Contact</a> &nbsp; &nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=6" title="Privacy Information" alt="Privacy Information" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">Privacy</a> &nbsp; &nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=82" style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">Resources</a> &nbsp; &nbsp; <a href="http://www.marinersoftware.com/sitepage.php?page=83" style="color:#ffffff; size:11px; text-decoration: none;">Site Map</a>
-&nbsp; &nbsp;<span style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">©1996-2005 Mariner Software. All Rights Reserved</span>    </td>
+&nbsp; &nbsp;<span style="color: rgb(255, 255, 255); font-size: 11px; text-decoration: none;">©1996-2006 Mariner Software. All Rights Reserved</span>    </td>
 	<td class="siteBorderRight"></td>
   </tr>
 </tbody></table>
