--- a/c/ch/cho/chooseyouritem.com.html
+++ b/c/ch/cho/chooseyouritem.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chooseyouritem.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210055042id_/http%3A//chooseyouritem.com/policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chooseyouritem.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615025940id_/http%3A//www.chooseyouritem.com/policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <!--BEGIN-->
@@ -284,7 +284,7 @@ If you have any additional questions about this classifieds network's dedication
 <!--hrtag-->
 <!--bottomprivacytag-->
 				<tr>
-					<td><center><a href="/" style="text-decoration:none"><font size="1" face="arial" color="#000000">©200</font></a><a href="http://www.greatvehicles.com" target="new window" style="text-decoration:none"><font size="1" face="arial" color="#000000">0</font></a><a href="http://www.chooseyouritem.com/" style="text-decoration:none"><font size="1" face="arial" color="#000000"> -- 2003</font></a><font size="1" face="arial" color="#000000"> - </font><a href="/policy.html" style="text-decoration:none"><font size="1" face="arial" color="#000000">Use&nbsp;Agreement&nbsp;and&nbsp;Privacy&nbsp;Policy</font></a></center></td>
+					<td><center><a href="/" style="text-decoration:none"><font size="1" face="arial" color="#000000">©200</font></a><a href="http://www.greatvehicles.com" target="new window" style="text-decoration:none"><font size="1" face="arial" color="#000000">0</font></a><a href="http://www.chooseyouritem.com/" style="text-decoration:none"><font size="1" face="arial" color="#000000"> -- 2006</font></a><font size="1" face="arial" color="#000000"> - </font><a href="/policy.html" style="text-decoration:none"><font size="1" face="arial" color="#000000">Use&nbsp;Agreement&nbsp;and&nbsp;Privacy&nbsp;Policy</font></a></center></td>
 				</tr>
 <!--bottomprivacytag-->
 <!--poweredbytag-->
@@ -365,6 +365,19 @@ If you have any additional questions about this classifieds network's dedication
 						</ul>
 <!--coloredlefttextsections-->
 				    </td>
+				</tr>
+				<tr>
+					<td align="center">
+<script type="text/javascript"><!--
+google_ad_client = "pub-3538138664070034";
+google_ad_width = 125;
+google_ad_height = 125;
+google_ad_format = "125x125_as_rimg";
+google_cpa_choice = "CAAQweaZzgEaCA2ZyYC_NXeAKK2293M";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+					</td>
 				</tr>
 			</tbody></table>
 		</td>
